# talking-stickies

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
apps/applet-kando/ui/: package.json
apps/applet/ui/: .gitignore  package.json  rollup.config.js  tsconfig.json
apps/holo/ui/: package-lock.json  package.json
apps/holo/workdir/: happ.yaml
apps/launcher-kanban/ui/: package.json
apps/launcher-kanban/workdir/: happ.yaml  web-happ.yaml
apps/launcher-kando/ui/: package.json  rollup.config.js  tsconfig.json
apps/launcher-kando/workdir/: happ.yaml  web-happ.yaml
apps/launcher/ui/: .gitignore  package.json  rollup.config.js  tsconfig.json
apps/launcher/workdir/: happ.yaml  web-happ.yaml
dna/workdir/dna/: dna.yaml
dna/workdir/happ/: happ.yaml
dna/zomes/syn/: Cargo.toml
dna/zomes/syn_integrity/: Cargo.toml
libs/ui/: .gitignore  package.json  svelte.config.js  tsconfig.json
libs/zomes/syn/: Cargo.toml
libs/zomes/syn_integrity/: Cargo.toml
libs/zomes/syn_integrity/src/: lib.rs
nix/: sources.json
ui/: .gitignore  package.json  rollup.config.js
ui/src/: App.svelte  Board.svelte  BoardEditor.svelte  BoardPane.svelte  Boards.svelte  SortSelector.svelte  StickyEditor.svelte  Syn.svelte  Toolbar.svelte  board.ts  grammar.ts  stores.js  talkingStickiesStore.ts
ui/src/icons/: DownIcon.svelte  EmojiIcon.svelte  ExIcon.svelte  (+6 more)
we-applet/: package.json
we-applet/demo/: index.html
we-applet/src/: index.ts  talking_stickies-applet.ts
we-applet/workdir/: dna.yaml  happ.yaml  web-happ.yaml
workdir/: web-happ.yaml
(+63 files in other folders)
