[package]
edition = "2018"
name = "syn"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "syn"

[dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
serde = "1"

hc_zome_syn_coordinator = {git = "https://github.com/holochain/syn", branch = "for-hdk-v0.1.0"}
