[package]
edition = "2018"
name = "syn_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "syn_integrity"

[dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
serde = "1"

hc_zome_syn_integrity = {git = "https://github.com/holochain/syn", rev = "171d08c79aed2b89869a4198b9cb7522dc6e03ca"}
